--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     <!-- Services End -->
 
 
-   <!-- Portfolio Start -->
+   <!-- Portfolio Start 
    <div class="container-fluid pt-5 pb-3" id="portfolio">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
@@ -328,13 +328,14 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/video.png" alt="">
+                        <img class="img-fluid rounded w-100" src="img/video.png" alt=""> -->
                   <!--> <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                             <a href="img/cricket.png" data-lightbox="portfolio">
                                 <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
                             </a>
-                        </div> -->
-                    </div>
+                 
+      </div> -->
+             <!--       </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative overflow-hidden mb-2">
@@ -364,7 +365,7 @@
             </div>
         </div>
     </div>*/
-    
+    -->
 
 
    
